--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="styles.scss">
+  <link rel="stylesheet" href="./styles.scss">
+  <link rel="preload" as="image" href="assets/images/IMG_9979.jpeg">
+  <link rel="preload" as="image" href="assets/images/IMG_9983.jpeg">
+  <link rel="preload" as="image" href="assets/images/gallery/IMG_0313.jpeg">
 </head>
 <body>
   <app-root></app-root>
