add google tag for google analytics tracking

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="./styles.scss">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XJ196F16DD"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-XJ196F16DD');
+  </script>
 </head>
 <body>
   <app-root></app-root>
